--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-
+    //implementation 'com.github.wp529:ExposureRecyclerView:1.1.0'
 }
