支持根布局的直接子View添加曝光

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".VpFragmentActivity"/>
         <activity android:name=".HorizontalRvActivity"/>
         <activity android:name=".RvInScrollActivity"/>
+        <activity android:name=".ExposureInChildActivity"/>
     </application>
 
 </manifest>
