--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation project(path: ':exposure')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-    //implementation 'com.github.wp529:ExposureRecyclerView:1.1.0'
+    implementation project(path: ':exposure')
+    //implementation 'com.github.wp529:ExposureRecyclerView:1.1.1'
+    implementation 'com.github.donkingliang:ConsecutiveScroller:4.0.0'
 }
