--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".HorizontalRvActivity"/>
         <activity android:name=".RvInScrollActivity"/>
         <activity android:name=".ExposureInChildActivity"/>
+        <activity android:name=".CollectViewGroupActivity"/>
     </application>
 
 </manifest>
